feat(auth): Authenticate users via email address 	- Add some other major activities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".WelcomeActivity" />
+        <activity android:name=".SignOutActivity" />
+        <activity android:name=".NurseRoomActivity" />
+        <activity android:name=".FeedbackActivity" />
+        <activity android:name=".HighScoreActivity" />
+        <activity android:name=".AboutActivity"></activity>
     </application>
 
 </manifest>
