Design view for lecture sections
 - Complete the about page

 - Start out the feedback page

 - Implement recycleview for sections

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         <activity android:name=".NurseRoomActivity" />
         <activity android:name=".FeedbackActivity" />
         <activity android:name=".HighScoreActivity" />
-        <activity android:name=".AboutActivity"></activity>
+        <activity android:name=".AboutActivity" />
+        <activity android:name=".LectureContentActivity"></activity>
     </application>
 
 </manifest>
