--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         <activity android:name=".FeedbackActivity" />
         <activity android:name=".HighScoreActivity" />
         <activity android:name=".AboutActivity" />
-        <activity android:name=".LectureContentActivity"></activity>
+        <activity android:name=".LectureContentActivity" />
+        <activity android:name=".CreateActivity"></activity>
     </application>
 
 </manifest>
