--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,7 +26,8 @@
         <activity android:name=".LectureContentActivity" />
         <activity android:name=".CreateActivity" />
         <activity android:name=".LectureListActivity" />
-        <activity android:name=".CreateQuestionActivity"></activity>
+        <activity android:name=".CreateQuestionActivity"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
