--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,9 +4,10 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "com.mazimia.mobile.nurselectureroom"
-        minSdkVersion 22
+        minSdkVersion 16
         targetSdkVersion 27
-        versionCode 2
+        multiDexEnabled true
+        versionCode 4
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -35,6 +36,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.0.0'
     implementation 'com.android.support:gridlayout-v7:27.0.0'
     implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support:multidex:1.0.3'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
